--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "dependencies": {
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
-    "mysql2": "^3.9.7",
-    "typescript": "^5.4.5"
+    "mysql2": "^3.9.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mysql": "^2.15.26",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
+    "typescript": "^5.4.5",
     "ts-node": "^10.9.2"
   }
 }
