:sparkles: Multi staging

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/mysql": "^2.15.26",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
