--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node ./index.js",
+    "start": "npx tsc && node ./index.js",
     "develop": "npx nodemon ./index.ts"
   },
   "keywords": [],
